# localreview

./: .env.example  .gitignore  README.md  docker-compose.yml  start.ps1  stop.ps1
EQUIPO/: DIRECTOR_DE_PROYECTO.md  PROGRAMADOR_SENIOR.md  TESTER.md
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 335bcaf500bf_initial_tables.py
backend/app/: config.py  dependencies.py  main.py  models.py
backend/app/auth/: router.py  service.py  utils.py
backend/app/backup/: router.py  service.py
backend/app/businesses/: models.py  router.py  schemas.py  service.py
backend/app/comments/: router.py  schemas.py  service.py
backend/app/dashboard/: router.py
backend/app/db/: cassandra.py  mongodb.py  postgres.py  redis.py
backend/app/photos/: router.py
backend/app/reviews/: router.py  schemas.py  service.py
backend/app/search/: router.py
backend/app/sync/: tasks.py
backend/app/users/: models.py  router.py  schemas.py
backend/cassandra/: init.cql
backend/scripts/: seed.py
backend/scripts/backup/: manual_backup.ps1  restore_backup.ps1  third_party_backup.py
backend/tests/: conftest.py  test_auth.py  test_businesses.py  test_comments.py  test_dashboard.py  test_reviews.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  backup.ts  businesses.ts  client.ts  reviews.ts
frontend/src/hooks/: useDocumentTitle.ts
frontend/src/pages/: BackupPage.tsx  BusinessDetailPage.tsx  DashboardPage.tsx  (+7 more)
(+17 files in other folders)
